<resources>
    <string name="app_name">Mobilum Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mobilum Tracker</string>
    <string name="nav_header_subtitle">Keep your vehicle safe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_events">Events</string>
    <string name="event_name">Event name</string>
    <string name="Lorem_Ipsum_1p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et finibus nibh, vel venenatis mauris. Fusce vel tellus eros. Maecenas ullamcorper gravida egestas. Etiam est est, semper at justo sit amet, volutpat eleifend urna. Sed fermentum eget metus quis fringilla. Morbi facilisis ultricies velit id consectetur. Etiam placerat ornare justo quis consectetur. Pellentesque id rutrum velit, at fermentum justo.</string>
    <string name="Example_days">1000</string>
    <string name="Example_distance">1000</string>
    <string name="days">days</string>
    <string name="kms">kms</string>
    <string name="Remaining_info">"Remaining: "</string>
    <string name="Days">Days</string>
    <string name="Kms">kms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_add">Add or edit event</string>
    <string name="description">Description</string>
    <string name="days_freqency">Frequency in days</string>
    <string name="dist_frequency">Frequency in kms.</string>
    <string name="Last_date">Last date of event</string>
    <string name="last_mileage">Last mileage at event</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="trigger_event">Trigger Event</string>
    <string name="edit_mileage">Edit Mileage</string>
    <string name="current_mileage">Current Mileage:</string>
    <string name="back">Back</string>
    <string name="Example_last_distance">20000</string>
    <string name="Example_last_date">12/12/1212</string>
    <string name="Current">Current:</string>
    <string name="Remaining">Remaining:</string>
    <string name="DateFormat">YYYY/mm/DD</string>
    <string name="action_sort_id">Sort by ID</string>
    <string name="action_sort_time">Sort by time</string>
    <string name="action_sort_distance">Sort by distance</string>
    <string name="action_sort_alphabet">Sort alphabetically</string>
</resources>