<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_id"
        android:orderInCategory="100"
        android:title="@string/action_sort_id"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_time"
        android:orderInCategory="101"
        android:title="@string/action_sort_time"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_distance"
        android:orderInCategory="102"
        android:title="@string/action_sort_distance"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_alphabet"
        android:orderInCategory="103"
        android:title="@string/action_sort_alphabet"
        app:showAsAction="never" />
</menu>