<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewEventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/textViewEventDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Lorem_Ipsum_1p"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewEventName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/textViewRemainingInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Remaining_info"
        app:layout_constraintTop_toBottomOf="@id/textViewEventDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewRemainingInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0">

        <TextView
            android:id="@+id/textViewDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Example_days"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textViewTextDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Days"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/textViewDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Example_distance"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textViewTextKms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Kms" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
